--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/style.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
-    <script defer src="/js/currency-converter.js"></script>
+    <script defer src="js/currency-converter.js"></script>
 </head>
 
 <body>
