--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 
 <head>
-    <meta property="og:image" content="images/share.png">
+    <meta property="og:image" content="/Users/mateuszgrygorowicz/dev/homepage/currency-converter/images/share.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
