--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="pl">
 
 <head>
-    <meta property="og:image" content="/share.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency-converter</title>
+    <meta property="og:image" content="/share.png">
+    <link rel="icon" href="/images/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
